src/objects/MX_PyME_Balance_Productos__c.object
<CustomObject>
    
     <fields>
        <fullName>MX_PyME_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente-BP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Balance Productos</relationshipLabel>
        <relationshipName>Balance_Productos</relationshipName>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>MX_PyME_Concepto_Credito__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Concepto del crédito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>MX_PyME_Descripcion_servicio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción del servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>MX_PyME_Fecha_activacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha activación</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>MX_PyME_Identificador_servicio__c</fullName>
        <label>Identificador de servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRTC</fullName>
                </value>
                <value>
                    <fullName>SEGR</fullName>
                </value>
                <value>
                    <fullName>TPVS</fullName>
                </value>
                <value>
                    <fullName>FISICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>MX_PyME_Indicador_impago__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Indicador de impago</label>
        <length>255</length>
        <type>Text</type>
    </fields>

     <fields>
        <fullName>MX_PyME_prodNumero_credito__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Número de crédito</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
   
     <fields>
        <fullName>MX_PyME_Saldo_del_servicio__c</fullName>
        <label>Saldo del servicio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

     <fields>
        <fullName>MX_PyME_Saldo_deudor__c</fullName>
        <label>Saldo deudor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>MX_PyME_Tipo_producto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <label>Balance Productos</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Balance Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>